Re-added flex grow, possible align issue fix

--- a/styles.css
+++ b/styles.css
@@ -79,6 +79,7 @@ h1 {
         color: #d2f2c6;
         padding-bottom: 20px;
         align-self: center;
+        flex-grow: 1;
         justify-content: center;
     }
 
